new models and views + refactoring
