# services/swagger/swagger.json
@@ -1,1 +1,245 @@
-{"openapi": "3.0.2", "info": {"version": "0.0.1", "title": "Supplyit Users Service", "description": "Swagger spec for documenting the users service"}, "servers": [{"url": "http://18.212.160.14"}], "paths": {"/users/ping": {"get": {"summary": "Just a sanity check", "responses": {"200": {"description": "Will return 'pong!'"}}}}, "/users": {"get": {"summary": "Returns all users", "responses": {"200": {"description": "user object"}}}, "post": {"summary": "Adds a new user", "requestBody": {"description": "User to add", "required": true, "content": {"application/json": {"schema": {"$ref": "#/components/schemas/user-register"}}}}, "security": [{"bearerAuth": []}], "responses": {"201": {"description": "User {user_email} added"}, "400": {"description": "'Invalid password' OR 'Sorry. That email already exists.'"}, "401": {"description": "You do not have permission to do that."}}}}, "/users/{id}": {"get": {"summary": "Returns a user based on a single user ID", "parameters": [{"name": "id", "in": "path", "description": "ID of user to fetch", "required": true, "schema": {"type": "integer", "format": "int64"}}], "responses": {"200": {"description": "user object"}, "404": {"description": "'User does not exist or password is invalid' OR 'Identifier should be an integer'"}}}}, "/auth/register": {"post": {"summary": "Creates a new user", "requestBody": {"description": "User to add", "required": true, "content": {"application/json": {"schema": {"$ref": "#/components/schemas/user-register"}}}}, "responses": {"200": {"description": "user object"}}}}, "/auth/login": {"post": {"summary": "Logs a user in", "requestBody": {"description": "User to log in", "required": true, "content": {"application/json": {"schema": {"$ref": "#/components/schemas/user-login"}}}}, "responses": {"200": {"description": "Successfully logged in"}}}}, "/auth/logout": {"get": {"summary": "Logs a user out", "security": [{"bearerAuth": []}], "responses": {"200": {"description": "Successfully logged out"}}}}, "/auth/status": {"get": {"summary": "Returns the logged in user's status", "security": [{"bearerAuth": []}], "responses": {"200": {"description": "user object"}}}}}, "components": {"securitySchemes": {"bearerAuth": {"type": "http", "scheme": "bearer"}}, "schemas": {"user-login": {"properties": {"email": {"type": "string"}, "password": {"type": "string"}}}, "user-register": {"properties": {"username": {"type": "string"}, "email": {"type": "string"}, "password": {"type": "string"}}}}}}
+{
+  "openapi": "3.0.2",
+  "info": {
+    "version": "0.0.1",
+    "title": "Supplyit Users Service",
+    "description": "Swagger spec for documenting the users service"
+  },
+  "servers": [
+    {
+      "url": "http://localhost"
+    }
+  ],
+  "paths": {
+    "/users/ping": {
+      "get": {
+        "summary": "Just a sanity check",
+        "responses": {
+          "200": {
+            "description": "Will return 'pong!'"
+          }
+        }
+      }
+    },
+    "/users": {
+      "get": {
+        "summary": "Returns all users",
+        "responses": {
+          "200": {
+            "description": "user object"
+          }
+        }
+      },
+      "post": {
+        "summary": "Adds a new user",
+        "requestBody": {
+          "description": "User to add",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/user-register"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "User {user_email} added"
+          },
+          "400": {
+            "description": "'Invalid password' OR 'Sorry. That email already exists.'"
+          },
+          "401": {
+            "description": "You do not have permission to do that."
+          }
+        }
+      }
+    },
+    "/users/{id}": {
+      "get": {
+        "summary": "Returns a user based on a single user ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of user to fetch",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "user object"
+          },
+          "404": {
+            "description": "'User does not exist or password is invalid' OR 'Identifier should be an integer'"
+          }
+        }
+      }
+    },
+    "/auth/register": {
+      "post": {
+        "summary": "Creates a new user",
+        "requestBody": {
+          "description": "User to add",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/user-register"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "user object"
+          }
+        }
+      }
+    },
+    "/auth/login": {
+      "post": {
+        "summary": "Logs a user in",
+        "requestBody": {
+          "description": "User to log in",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/user-login"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successfully logged in"
+          }
+        }
+      }
+    },
+    "/auth/logout": {
+      "get": {
+        "summary": "Logs a user out",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully logged out"
+          }
+        }
+      }
+    },
+    "/auth/status": {
+      "get": {
+        "summary": "Returns the logged in user's status",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "user object"
+          }
+        }
+      }
+    },
+    "/users/addresses": {
+      "get": {
+        "summary": "Returns all addresses",
+        "responses": {
+          "200": {
+            "description": "address object"
+          }
+        }
+      }
+    },
+    "/users/retailers": {
+      "get": {
+        "summary": "Returns all retailer users",
+        "responses": {
+          "200": {
+            "description": "retailer object"
+          }
+        }
+      }
+    },
+    "/users/suppliers": {
+      "get": {
+        "summary": "Returns all supplier users",
+        "responses": {
+          "200": {
+            "description": "supplier object"
+          }
+        }
+      }
+    },
+    "/users/companies": {
+      "get": {
+        "summary": "Returns all companies",
+        "responses": {
+          "200": {
+            "description": "Company object"
+          }
+        }
+      }
+    },
+    "/users/stores": {
+      "get": {
+        "summary": "Returns all stores",
+        "responses": {
+          "200": {
+            "description": "Store object"
+          }
+        }
+      }
+    }
+  },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer"
+      }
+    },
+    "schemas": {
+      "user-login": {
+        "properties": {
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        }
+      },
+      "user-register": {
+        "properties": {
+          "username": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        }
+      }
+    }
+  }
+}
