# services/users/project/api/views/retailers.py
@@ -6,7 +6,7 @@ from flask_restful import Resource, Api
 from project.api.models.retailers import RetailerModel
 from project.api.views.utils import authenticate_restful
 
-retailers_blueprint = Blueprint("retailers", __name__, template_folder="../templates")
+retailers_blueprint = Blueprint("retailers", __name__, url_prefix="/users", template_folder="../templates")
 api = Api(retailers_blueprint)
 
 
